--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <button id="button1" class="btn btn-secondary">Click Me!</button>
             </div>
             <div class="col">
-                <button id="button2" class="btn btn-secondary">Click Me!</button>
+                <button id="button2" class="btn btn-secondary">.......</button>
             </div>
         </div>
 
